<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="30dip"
    android:paddingRight="30dip"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="60dip"
        android:background="@null"
        android:gravity="center"
        android:text="安装权限"
        android:textColor="@color/black"
        android:textSize="@dimen/text_18sp" />

    <TextView
        android:id="@+id/tv_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:gravity="center"
        android:text="@string/tv28"
        android:textColor="@color/black"
        android:textSize="@dimen/text_16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60.0dip">
        <TextView
            android:id="@+id/btn_dialog_cancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/tv26"
            android:visibility="gone"
            android:textColor="@color/black"
            android:textSize="@dimen/text_14sp"
            />

        <TextView
            android:id="@+id/btn_dialog_confirm"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/tv27"
            android:textColor="@color/black"
            android:textSize="@dimen/text_14sp"
            />
    </LinearLayout>
</LinearLayout>
