<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color39"
    tools:context=".module.ui.users.UserInviteCodeActivity">

    <View
        android:id="@+id/status_bar_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_statue_height"
        android:background="@color/white" />
    <include layout="@layout/layout_toolbar" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="24dip"
        android:background="@mipmap/bg_invite_code">
        <TextView
            android:id="@+id/tv_ic_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_14sp"
            android:textColor="@color/black"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dip"
            android:text="@string/tv137"/>
        <TextView
            android:id="@+id/tv_ic_content"
            android:layout_below="@+id/tv_ic_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_24sp"
            android:textColor="@color/color37"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dip"
            android:textStyle="bold"
            android:text="1234"/>

        <TextView
            android:layout_below="@+id/tv_ic_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_12sp"
            android:textColor="@color/tabwd"
            android:layout_marginLeft="50dip"
            android:layout_marginRight="50dip"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dip"
            android:text="@string/tv138"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_share"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:layout_marginLeft="15dip"
        android:layout_marginRight="15dip"
        android:layout_marginTop="10dip"
        android:background="@drawable/bg_shape_ellipse"
        android:gravity="center"
        android:text="@string/tv139"
        android:textColor="@color/white"
        android:textSize="@dimen/text_16sp" />
    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lin_sign_addday"
        android:layout_marginLeft="30dip"
        android:layout_marginRight="30dip"
        android:layout_marginTop="30dip"
        android:text="@string/tv140"
        android:lineSpacingMultiplier="1.5"
        android:textColor="@color/tabwd"
        android:textSize="@dimen/text_12sp" />
</LinearLayout>