<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@null" >

    <View
        android:id="@+id/view_pay"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </View>
    <LinearLayout
        android:id="@+id/ll_popup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:orientation="vertical" >

         <TextView
             android:id="@+id/tv_pay_money"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="@string/tv103"
             android:layout_marginTop="10dip"
             android:textColor="@color/black"
             android:textStyle="bold"
             android:textSize="@dimen/text_22sp"/>
        <TextView
            android:id="@+id/tv_pay_integral"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="@dimen/text_14sp"
            android:text="@string/tv26"
            android:visibility="gone"
            android:textColor="@color/tabwd"
            android:layout_marginTop="10dip"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:text="@string/tv91"
            android:layout_marginTop="30dip"
            android:textSize="@dimen/text_16sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dip"
            android:layout_marginTop="20dip"
            android:background="@color/color3"></View>
        <LinearLayout
            android:id="@+id/lin_pay_wx"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_height="60dip">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/wxzf"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_16sp"
                android:layout_marginLeft="15dip"
                android:text="@string/tv92"
                android:textColor="@color/black"/>
            <ImageView
                android:id="@+id/iv_wx_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:src="@mipmap/zfyx"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dip"
            android:background="@color/color3"></View>
        <LinearLayout
            android:id="@+id/lin_pay_zfb"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:visibility="visible"
            android:layout_height="60dip">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/zfb"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_16sp"
                android:layout_marginLeft="15dip"
                android:text="@string/tv93"
                android:textColor="@color/black"/>
            <ImageView
                android:id="@+id/iv_zfb_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:src="@mipmap/zfwx"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dip"
            android:layout_marginTop="20dip"
            android:background="@color/color3"></View>
        <LinearLayout
            android:id="@+id/lin_pay_xj"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:visibility="gone"
            android:layout_height="60dip">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/xjzf"/>
            <TextView
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_16sp"
                android:layout_marginLeft="15dip"
                android:text="@string/tv95"
                android:textColor="@color/black"/>
            <ImageView
                android:id="@+id/iv_xj_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/zfwx"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>