<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".module.fragment.TabCategorizeFourthFragment">

    <LinearLayout
        android:id="@+id/lin_login"
        android:layout_width="match_parent"
        android:layout_height="80dip"
        android:background="@color/color37"
        android:gravity="center_vertical"
        android:paddingLeft="15dip"
        android:orientation="horizontal">
        <com.system.technologyinformation.widget.CircleImageView
            android:id="@+id/iv_userico"
            android:layout_width="55dip"
            android:layout_height="55dip"
            android:src="@mipmap/userphotomr" />
        <RelativeLayout
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_marginLeft="10dip"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_log_reg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_20sp"
                android:textColor="@color/white"
                android:text="@string/tv126"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/tv_log_reg_ts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv127"
                android:layout_below="@+id/tv_log_reg"
                android:textColor="@color/white"
                android:layout_marginTop="5dip"
                android:textSize="@dimen/text_14sp"/>
        </RelativeLayout>
        <TextView
            android:layout_width="98dip"
            android:layout_height="36dip"
            android:text="@string/tv128"
            android:gravity="center_vertical"
            android:textSize="@dimen/text_12sp"
            android:drawablePadding="5dip"
            android:paddingLeft="15dip"
            android:textColor="@color/color9"
            android:drawableLeft="@mipmap/user_info_update"
            android:background="@drawable/bg_user_info"/>
    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view_user"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color39"
        android:padding="15dip"/>
</LinearLayout>