<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="10dip"
    android:paddingRight="10dip"
    android:background="@color/white"
    tools:context=".module.fragment.TabCategorizeThirdFragment">

    <ImageView
        android:id="@+id/iv_sys"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="10dip"
        android:src="@mipmap/sp_scanning"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv99"
        android:textColor="@color/black"
        android:textSize="@dimen/text_16sp"
        android:visibility="gone"
        android:layout_marginTop="5dip"
        android:layout_gravity="right"/>
    <RelativeLayout
        android:id="@+id/rel_sp_shop"
        android:layout_width="match_parent"
        android:layout_height="140dip"
        android:layout_marginTop="15dip"
        android:background="@drawable/bg_entertainment1">
        <ImageView
            android:id="@+id/iv_sp_shop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dip"
            android:src="@mipmap/shoppingmr"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_24sp"
            android:textColor="@color/white"
            android:layout_toRightOf="@+id/iv_sp_shop"
            android:layout_centerVertical="true"
            android:layout_marginLeft="48dip"
            android:text="@string/tv100"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rel_sp_repast"
        android:layout_width="match_parent"
        android:layout_height="140dip"
        android:layout_marginTop="10dip"
        android:background="@drawable/bg_entertainment2">
        <ImageView
            android:id="@+id/iv_sp_repast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dip"
            android:src="@mipmap/shoppingmr"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_24sp"
            android:textColor="@color/white"
            android:layout_toRightOf="@+id/iv_sp_repast"
            android:layout_centerVertical="true"
            android:layout_marginLeft="48dip"
            android:text="@string/tv101"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="140dip"
        android:layout_marginTop="10dip"
        android:visibility="gone"
        android:background="@drawable/bg_entertainment3">
        <ImageView
            android:id="@+id/iv_sp_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dip"
            android:src="@mipmap/shoppingmr"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_24sp"
            android:textColor="@color/white"
            android:layout_toRightOf="@+id/iv_sp_play"
            android:layout_centerVertical="true"
            android:layout_marginLeft="48dip"
            android:text="@string/tv102"/>
    </RelativeLayout>

</LinearLayout>