<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color39"
    tools:context=".module.ui.users.UserCustomerServiceActivity">
    <View
        android:id="@+id/status_bar_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_statue_height"
        android:background="@color/white" />
    <include layout="@layout/layout_toolbar" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginTop="10dip"
        android:gravity="center"
        android:paddingTop="30dip"
        android:paddingBottom="15dip"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_cs_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv129"
            android:gravity="center_vertical"
            android:textSize="@dimen/text_16sp"
            android:drawablePadding="15dip"
            android:paddingLeft="15dip"
            android:textColor="@color/black"
            android:drawableLeft="@mipmap/call_service"
            />
        <TextView
            android:id="@+id/tv_cs_call_phone"
            android:layout_width="match_parent"
            android:layout_height="45dip"
            android:layout_marginLeft="15dip"
            android:layout_marginRight="15dip"
            android:gravity="center"
            android:text="@string/tv130"
            android:textColor="@color/white"
            android:textSize="@dimen/text_16sp"
            android:textStyle="bold"
            android:layout_marginTop="40dip"
            android:background="@drawable/bg_shape_login"/>
        <TextView
            android:id="@+id/tv_kf_y"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dip"
            />
        <TextView
            android:id="@+id/tv_kf_e"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="15dip"
            />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv131"
        android:gravity="center"
        android:textSize="@dimen/text_10sp"
        android:textColor="@color/tabwd"
        android:layout_marginTop="12dip"
        />
</LinearLayout>